# python

./: README.md  cv-builder-02.py  cv-builder-03.py  cv-builder-beta01.py  notifymeAboutBitcoinExcRate.py  rock-paper-scissors.py  scality.py
2025/: currency_checker.py  expense_tracker.py  github_grabber.py  weather_report.py
2025/aws-automation-tasks/: 04_vpc_create.py  05_rds.py  ec2_launch.py  s3_crud.py
2026/infra_tool/: .gitignore  __init__.py  main.py  pyproject.toml
2026/infra_tool/src/infra_tool/: main.py
2026/infra_tool/src/infra_tool/config/: data.yaml
2026/infra_tool/src/infra_tool/logs/: log_analyzer.py
2026/infra_tool/src/infra_tool/services/: systemd.py
2026/infra_tool/src/infra_tool/utils/: backup.py
infra_tool/: cli.py  pyproject.toml
infra_tool/logs/: log_analyzer.py
infra_tool/monitoring/: status.py
